--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-firebase/app": "^21.12.1",
     "@react-native-firebase/firestore": "^21.12.1",
     "@react-native-firebase/remote-config": "^21.12.1",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/native-stack": "^7.3.2",
     "@types/react-native-snap-carousel": "^3.8.11",
     "react": "19.0.0",
     "react-native": "0.78.1",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
     "react-native-snap-carousel": "^4.0.0-beta.6"
   },
   "devDependencies": {
